--- a/scripts/aws/01_cicd_commons_pipeline.yaml
+++ b/scripts/aws/01_cicd_commons_pipeline.yaml
@@ -174,6 +174,9 @@ Resources:
         Type: LINUX_CONTAINER
         Image: "aws/codebuild/amazonlinux2-x86_64-standard:3.0"
         EnvironmentVariables: 
+          - Name: REPOSITORY_DOMAIN
+            Type: PLAINTEXT
+            Value: !GetAtt PnCodeArtifactDomain.Name
           - Name: SETTINGS
             Type: PLAINTEXT
             Value: |
