--- a/scripts/aws/codebuild_spec.yaml
+++ b/scripts/aws/codebuild_spec.yaml
@@ -8,7 +8,10 @@ phases:
   post_build:
     commands:
       - echo "Deploy"
-      - echo $SETTINGS
+      - echo $SETTINGS > maven-deploy-settings.xml
+      - cat maven-deploy-settings.xml
+      - export REPOSITORY_TOKEN=$( aws cicd codeartifact get-authorization-token --domain $REPOSITORY_DOMAIN --query authorizationToken --output text )
+      - ./mvnw deploy
 artifacts:
   files:
     - 'dist/**'
