--- a/scripts/aws/codebuild_spec.yaml
+++ b/scripts/aws/codebuild_spec.yaml
@@ -10,7 +10,7 @@ phases:
       - echo "Deploy"
       - echo $SETTINGS > maven-deploy-settings.xml
       - cat maven-deploy-settings.xml
-      - export REPOSITORY_TOKEN=$( aws cicd codeartifact get-authorization-token --domain $REPOSITORY_DOMAIN --query authorizationToken --output text )
+      - export REPOSITORY_TOKEN=$( aws codeartifact get-authorization-token --domain $REPOSITORY_DOMAIN --query authorizationToken --output text )
       - ./mvnw deploy
 artifacts:
   files:
