PN-243 implementazione client per mock e test di integrazione minimale

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -3,6 +3,7 @@ pn.middleware.init.cassandra=true
 pn.middleware.init.kafka=true
 pn.middleware.init.aws=true
 
+pn.clients.address-book-base-url=https://zkkwwk0v41.execute-api.eu-central-1.amazonaws.com/mock/develop/addresses/
 
 # AWS properties
 aws.accessKeyId=PN-TEST
