Fix env var to activate CI profile

--- a/pom.xml
+++ b/pom.xml
@@ -296,7 +296,7 @@
 			<activation>
 				<activeByDefault>false</activeByDefault>
 				<property>
-					<name>CI_PROFILE</name>
+					<name>env.CI_PROFILE</name>
 				</property>
 			</activation>
 			<properties>
