Clean up and test PR sonar analisys

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<artifactId>pn-commons</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>pn-commons</name>
-	<description>Common Utilities</description>
+	<description>Pn Common Utilities</description>
 
 	<dependencies>
 		<dependency>
