--- a/pom.xml
+++ b/pom.xml
@@ -2,16 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>it.pagopa.pn</groupId>
 		<artifactId>pn-parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath/>
 	</parent>
+
 	<artifactId>pn-commons</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>pn-commons</name>
-	<description>Common Utilities</description>
+	<description>Pn Common Utilities</description>
 
 	<dependencies>
 		<dependency>
@@ -41,17 +43,6 @@
 			<artifactId>springdoc-openapi-webflux-ui</artifactId>
 			<version>1.5.8</version>
 		</dependency>
-
-		
-		<!-- https://mvnrepository.com/artifact/net.logstash.logback/logstash-logback-encoder -->
-		<!--
-		<dependency>
-			<groupId>net.logstash.logback</groupId>
-			<artifactId>logstash-logback-encoder</artifactId>
-			<version>6.6</version>
-		</dependency>
-	-->
-
 		<dependency>
 			<groupId>software.amazon.awssdk</groupId>
 			<artifactId>dynamodb</artifactId>
@@ -91,7 +82,6 @@
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
@@ -108,5 +98,4 @@
 			<version>4.5.13</version>
 		</dependency>
 	</dependencies>
-
 </project>
