PN-2367: log del jti

--- a/src/main/resources/application-shared.properties
+++ b/src/main/resources/application-shared.properties
@@ -1,3 +1,4 @@
 # Header per traceid
 pn.log.trace-id-header=X-Amzn-Trace-Id
+pn.log.jti-id-header=x-pagopa-pn-jti
 pn.commons.features.is-mvp-default-value=true
