--- a/src/main/resources/application-shared.properties
+++ b/src/main/resources/application-shared.properties
@@ -1,4 +1,9 @@
 # Header per traceid
 pn.log.trace-id-header=X-Amzn-Trace-Id
 pn.log.jti-header=x-pagopa-pn-jti
+pn.log.pn-uid-header=x-pagopa-pn-uid
+pn.log.cx-id-header=x-pagopa-cx-id
+pn.log.pn-cx-type-header=x-pagopa-pn-cx-type
+pn.log.pn-cx-groups-header=x-pagopa-pn-cx-groups
+pn.log.pn-cx-role-header=x-pagopa-pn-cx-role
 pn.commons.features.is-mvp-default-value=true
