--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,10 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-core</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
