PN-3390 centralizzata config WebClient

--- a/src/main/resources/application-shared.properties
+++ b/src/main/resources/application-shared.properties
@@ -7,3 +7,5 @@ pn.log.pn-cx-type-header=x-pagopa-pn-cx-type
 pn.log.pn-cx-groups-header=x-pagopa-pn-cx-groups
 pn.log.pn-cx-role-header=x-pagopa-pn-cx-role
 pn.commons.features.is-mvp-default-value=true
+pn.commons.retry.max-attempts=3
+pn.commons.connection-timeout-millis=10000
