PN-3005 add CloudWatchClient

--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,10 @@
 			<version>4.10.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>cloudwatch</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
