--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,14 @@
 	</parent>
 
 	<artifactId>pn-commons</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>2.0.0</version>
 	<name>pn-commons</name>
 	<description>Pn Common Utilities</description>
 	<scm>
 		<connection>${git.conn}</connection>
 		<developerConnection>${git.devConn}</developerConnection>
 		<url>${git.url}</url>
-	  <tag>HEAD</tag>
+	  <tag>v2.0.0</tag>
   </scm>
 	<dependencies>
 
