--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,3 +1,5 @@
+logging.config=classpath:logback-test.xml
+
 pn.env.runtime=DEVELOPMENT
 pn.middleware.init.cassandra=true
 pn.middleware.init.kafka=true
