--- a/src/main/resources/application-shared.properties
+++ b/src/main/resources/application-shared.properties
@@ -16,6 +16,9 @@ lollipop.core.config.expectedFirstLcOriginalUrl=${LOLLIPOP_EXPECTED_LC_ORIGINAL_
 lollipop.core.config.expectedFirstLcOriginalMethod=${LOLLIPOP_EXPECTED_LC_ORIGINAL_METHOD:GET}
 lollipop.core.config.assertionNotBeforeDateFormat=${LOLLIPOP_ASSERTION_NOT_BEFORE_DATE_FORMAT:yyyy-MM-dd'T'HH:mm:ss'Z'}
 lollipop.core.config.assertionInstantDateFormat=${LOLLIPOP_ASSERTION_INSTANT_DATE_FORMAT:yyyy-MM-dd'T'HH:mm:ss'Z'}
+lollipop.core.config.enableAssertionLogging=false
+lollipop.core.config.enableIdpCertDataLogging=false
+lollipop.core.config.enableConsumerLogging=true
 
 ##Assertion Client Configs
 lollipop.assertion.rest.config.baseUri=${ASSERTION_REST_URI:http://localhost:3000}
