--- a/src/main/resources/application-shared.properties
+++ b/src/main/resources/application-shared.properties
@@ -18,7 +18,7 @@ lollipop.core.config.assertionNotBeforeDateFormat=${LOLLIPOP_ASSERTION_NOT_BEFOR
 lollipop.core.config.assertionInstantDateFormat=${LOLLIPOP_ASSERTION_INSTANT_DATE_FORMAT:yyyy-MM-dd'T'HH:mm:ss'Z'}
 lollipop.core.config.enableAssertionLogging=false
 lollipop.core.config.enableIdpCertDataLogging=false
-lollipop.core.config.enableConsumerLogging=true
+lollipop.core.config.enableConsumerLogging=${LOLLIPOP_ENABLE_CONSUMER_LOGGING:true}
 
 ##Assertion Client Configs
 lollipop.assertion.rest.config.baseUri=${ASSERTION_REST_URI:http://localhost:3000}
