--- a/src/main/resources/application-shared.properties
+++ b/src/main/resources/application-shared.properties
@@ -18,10 +18,10 @@ lollipop.core.config.assertionNotBeforeDateFormat=${LOLLIPOP_ASSERTION_NOT_BEFOR
 lollipop.core.config.assertionInstantDateFormat=${LOLLIPOP_ASSERTION_INSTANT_DATE_FORMAT:yyyy-MM-dd'T'HH:mm:ss'Z'}
 lollipop.core.config.enableAssertionLogging=false
 lollipop.core.config.enableIdpCertDataLogging=false
-lollipop.core.config.enableConsumerLogging=true
+lollipop.core.config.enableConsumerLogging=${LOLLIPOP_ENABLE_CONSUMER_LOGGING:true}
 
 ##Assertion Client Configs
-lollipop.assertion.rest.config.baseUri=${ASSERTION_REST_URI:http://localhost:3000}
+lollipop.assertion.rest.config.baseUri=${LOLLIPOP_ASSERTION_REST_URI:http://localhost:3000}
 lollipop.assertion.rest.config.assertionRequestEndpoint=${ASSERTION_REST_ENDPOINT:/assertions}
 
 ##Assertion Storage Configs
@@ -30,7 +30,7 @@ lollipop.assertion.rest.config.storageEvictionDelay=${ASSERTION_STORAGE_EVICTION
 
 ###Idp Client Configs
 lollipop.idp.rest.config.cieEntityId=${IDP_CLIENT_CIEID:https://idserver.servizicie.interno.gov.it/idp/profile/SAML2/POST/SSO}
-lollipop.idp.rest.config.baseUri=${IDP_CLIENT_BASE_URI:http://localhost:3001}
+lollipop.idp.rest.config.baseUri=${LOLLIPOP_IDP_CLIENT_BASE_URI:http://localhost:3001}
 lollipop.idp.rest.config.idpKeysCieEndpoint=${IDP_CLIENT_CIE_ENDPOINT:/idp-keys/cie}
 lollipop.idp.rest.config.idpKeysSpidEndpoint=${IDP_CLIENT_SPID_ENDPOINT:/idp-keys/spid}
 
