PN-6775: update lollipop sdk

--- a/src/main/resources/application-shared.properties
+++ b/src/main/resources/application-shared.properties
@@ -23,6 +23,7 @@ lollipop.core.config.enableConsumerLogging=${LOLLIPOP_ENABLE_CONSUMER_LOGGING:tr
 ##Assertion Client Configs
 lollipop.assertion.rest.config.baseUri=${LOLLIPOP_ASSERTION_REST_URI:https://api.io.pagopa.it}
 lollipop.assertion.rest.config.assertionRequestEndpoint=${ASSERTION_REST_ENDPOINT:/assertions}
+lollipop.assertion.rest.config.subscriptionKey=${ASSERTION_REST_SUBSCRIPTION_KEY:FakeSubscriptionKey}
 
 ##Assertion Storage Configs
 lollipop.assertion.rest.config.assertionStorageEnabled=${ASSERTION_STORAGE_ENABLED:true}
