--- a/src/main/resources/application-shared.properties
+++ b/src/main/resources/application-shared.properties
@@ -16,12 +16,12 @@ lollipop.core.config.expectedFirstLcOriginalUrl=${LOLLIPOP_EXPECTED_LC_ORIGINAL_
 lollipop.core.config.expectedFirstLcOriginalMethod=${LOLLIPOP_EXPECTED_LC_ORIGINAL_METHOD:GET}
 lollipop.core.config.assertionNotBeforeDateFormat=${LOLLIPOP_ASSERTION_NOT_BEFORE_DATE_FORMAT:yyyy-MM-dd'T'HH:mm:ss'Z'}
 lollipop.core.config.assertionInstantDateFormat=${LOLLIPOP_ASSERTION_INSTANT_DATE_FORMAT:yyyy-MM-dd'T'HH:mm:ss'Z'}
-lollipop.core.config.enableAssertionLogging=false
-lollipop.core.config.enableIdpCertDataLogging=false
+lollipop.core.config.enableAssertionLogging=${LOLLIPOP_ENABLE_ASSERTION_LOGGING:false}
+lollipop.core.config.enableIdpCertDataLogging=${LOLLIPOP_ENABLE_IDP_LOGGING:false}
 lollipop.core.config.enableConsumerLogging=${LOLLIPOP_ENABLE_CONSUMER_LOGGING:true}
 
 ##Assertion Client Configs
-lollipop.assertion.rest.config.baseUri=${LOLLIPOP_ASSERTION_REST_URI:https://api.io.pagopa.it}
+lollipop.assertion.rest.config.baseUri=${LOLLIPOP_ASSERTION_REST_URI:https://api.pagopa.it/lollipop/api/v1}
 lollipop.assertion.rest.config.assertionRequestEndpoint=${ASSERTION_REST_ENDPOINT:/assertions}
 lollipop.assertion.rest.config.subscriptionKey=${ASSERTION_REST_SUBSCRIPTION_KEY:FakeSubscriptionKey}
 
