PN-7177 - Meccanismo attivazione HTTP logs

--- a/src/main/resources/application-shared.properties
+++ b/src/main/resources/application-shared.properties
@@ -36,3 +36,6 @@ lollipop.idp.rest.config.idpKeysSpidEndpoint=${IDP_CLIENT_SPID_ENDPOINT:/idp-key
 ###Idp Storage Configs
 lollipop.idp.storage.config.idpCertDataStorageEnabled=${IDP_STORAGE_ENABLED:true}
 lollipop.idp.storage.config.storageEvictionDelay=${IDP_STORAGE_EVICTION_DELAY:1}
+
+###Logging Configs
+pn.commons.wire-tap-activation=false
