--- a/src/main/resources/application-shared.properties
+++ b/src/main/resources/application-shared.properties
@@ -37,3 +37,10 @@ lollipop.idp.rest.config.idpKeysSpidEndpoint=${IDP_CLIENT_SPID_ENDPOINT:/idp-key
 ###Idp Storage Configs
 lollipop.idp.storage.config.idpCertDataStorageEnabled=${IDP_STORAGE_ENABLED:true}
 lollipop.idp.storage.config.storageEvictionDelay=${IDP_STORAGE_EVICTION_DELAY:1}
+
+###ECS Container info
+pn.ecs.uri = ${ECS_AGENT_URI:http://address/api/notknown}
+pn.ecs.task.id=#{'${pn.ecs.uri}'.split('[/]')[4].split('[-]')[0]}
+pn.analyzer.cloudwatch-metric-cron=${PN_CRON_ANALYZER:-}
+
+pn.analyzer.params=#{'executor.active,executor.queue.remaining,executor.queued'.split('[,]')}
