--- a/src/main/resources/application-shared.properties
+++ b/src/main/resources/application-shared.properties
@@ -40,7 +40,5 @@ lollipop.idp.storage.config.storageEvictionDelay=${IDP_STORAGE_EVICTION_DELAY:1}
 
 ###ECS Container info
 pn.ecs.uri = ${ECS_AGENT_URI:http://address/api/notknown}
-pn.ecs.task.id=#{'${pn.ecs.uri}'.split('[/]')[4].split('[-]')[0]}
 pn.analyzer.cloudwatch-metric-cron=${PN_CRON_ANALYZER:-}
-
-pn.analyzer.params=#{'executor.active,executor.queue.remaining,executor.queued'.split('[,]')}
+pn.analyzer.params= ${PN_ANALYZER_VALUES_ACTUATOR:''}
