--- a/src/main/resources/application-shared.properties
+++ b/src/main/resources/application-shared.properties
@@ -39,6 +39,6 @@ lollipop.idp.storage.config.idpCertDataStorageEnabled=${IDP_STORAGE_ENABLED:true
 lollipop.idp.storage.config.storageEvictionDelay=${IDP_STORAGE_EVICTION_DELAY:1}
 
 ###ECS Container info
-pn.ecs.uri = ${ECS_AGENT_URI:http://address/api/notknown}
+pn.ecs.uri = ${ECS_AGENT_URI:http://address/api/local}
 pn.analyzer.cloudwatch-metric-cron=${PN_CRON_ANALYZER:-}
-pn.analyzer.params= ${PN_ANALYZER_VALUES_ACTUATOR:''}
+pn.analyzer.params= ${PN_ANALYZER_VALUES_ACTUATOR:jvm.threads.live,jvm.memory.used,executor.queued'}
