--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -29,3 +29,4 @@ spring.data.cassandra.contact-points=localhost
 spring.data.cassandra.username=cassandra
 spring.data.cassandra.password=cassandra
 
+pn.commons.wire-tap-activation=false
