--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<artifactId>pn-commons</artifactId>
-	<version>2.2.0-SNAPSHOT</version>
+	<version>2.2.0-SNAPSHOT-test</version>
 	<name>pn-commons</name>
 	<description>Pn Common Utilities</description>
 	<scm>
