PN-9088: add read and connection timeout value, fix logging level to warn

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<artifactId>pn-commons</artifactId>
-	<version>2.5.0</version>
+	<version>2.6.0-SNAPSHOT</version>
 	<name>pn-commons</name>
 	<description>Pn Common Utilities</description>
 	<scm>
@@ -69,22 +69,22 @@
 		<dependency>
 			<groupId>it.pagopa.tech.lollipop-consumer-java-sdk</groupId>
 			<artifactId>core</artifactId>
-			<version>1.0.0-RC5</version>
+			<version>1.0.0-RC6</version>
 		</dependency>
 		<dependency>
 			<groupId>it.pagopa.tech.lollipop-consumer-java-sdk</groupId>
 			<artifactId>http-verifier</artifactId>
-			<version>1.0.0-RC5</version>
+			<version>1.0.0-RC6</version>
 		</dependency>
 		<dependency>
 			<groupId>it.pagopa.tech.lollipop-consumer-java-sdk</groupId>
 			<artifactId>assertion-rest-client-native</artifactId>
-			<version>1.0.0-RC5</version>
+			<version>1.0.0-RC6</version>
 		</dependency>
 		<dependency>
 			<groupId>it.pagopa.tech.lollipop-consumer-java-sdk</groupId>
 			<artifactId>identity-service-rest-client-native</artifactId>
-			<version>1.0.0-RC5</version>
+			<version>1.0.0-RC6</version>
 		</dependency>
 
 		<dependency>
