[PN-14026] feat: added new keys in MDC for srcChannel and srcChannelDetails headers

--- a/src/main/resources/application-shared.properties
+++ b/src/main/resources/application-shared.properties
@@ -6,6 +6,8 @@ pn.log.cx-id-header=x-pagopa-pn-cx-id
 pn.log.pn-cx-type-header=x-pagopa-pn-cx-type
 pn.log.pn-cx-groups-header=x-pagopa-pn-cx-groups
 pn.log.pn-cx-role-header=x-pagopa-pn-cx-role
+pn.log.pn-source-channel-header=x-pagopa-pn-src-ch
+pn.log.pn-source-channel-details-header=x-pagopa-pn-src-ch-details
 pn.commons.features.is-mvp-default-value=true
 pn.commons.retry.max-attempts=3
 pn.commons.connection-timeout-millis=3000
